Check user input