@@ -1,17 +1,19 @@
 package view;
 
-import controller.Controller;
-import data.TrackDataObject;
-import javafx.event.ActionEvent;
-import javafx.fxml.FXML;
-import javafx.scene.control.Alert;
-import javafx.scene.control.TextField;
-import javafx.stage.Stage;
-
 import java.net.URL;
 import java.util.ResourceBundle;
 
-public class EditDialogController {
+import controller.Controller;
+import javafx.event.ActionEvent;
+import javafx.fxml.FXML;
+import javafx.scene.control.Alert;
+import javafx.scene.control.Button;
+import javafx.scene.control.ComboBox;
+import javafx.scene.control.TextField;
+import javafx.stage.Stage;
+
+public class AddDialogController {
+
     @FXML
     private ResourceBundle resources;
 
@@ -35,7 +37,6 @@ public class EditDialogController {
 
     private Stage dialogStage;
     private Controller controller;
-    private TrackDataObject track;
 
     public void setDialogStage(Stage dialogStage) {
         this.dialogStage = dialogStage;
@@ -44,42 +45,30 @@ public class EditDialogController {
     {
         this.controller = controller;
     }
-    public void setTrack(TrackDataObject track)
-    {
-        this.track = track;
-        setField(track);
-    }
-    private void setField(TrackDataObject track)
-    {
-        this.Name.setText(track.getTitle());
-        this.Album.setText(track.getAlbum());
-        this.Author.setText(track.getPerformer());
-        this.Genre.setText(track.getGenre().getTitle());
-        this.Duration.setText(track.getDuration().toString());
-    }
-    @FXML
-    void initialize()
-    {
 
+    @FXML
+    void initialize() {
     }
     @FXML
-    void Cancel(ActionEvent event)
+    public void Cancel(ActionEvent event)
     {
         dialogStage.close();
     }
+
     @FXML
-    void OK(ActionEvent event)
+    public void OK(ActionEvent event)
     {
         if (isValidInput())
         {
             String title = this.Name.getText();
+            String duration = this.Duration.getText();
             String album = this.Album.getText();
             String genre = this.Genre.getText();
             String performer = this.Author.getText();
-            Integer Duration = new Integer(this.Duration.getText());
-            controller.changeTrack(track.getId(), title, performer, album, genre, Duration);
+            controller.addTrack(null, title, performer, album, genre, Integer.valueOf(duration));
             dialogStage.close();
         }
+
     }
     private boolean isValidInput()
     {
@@ -113,14 +102,14 @@ public class EditDialogController {
         if (errorMessage.length() == 0)
             return true;
         else
-        {
-            Alert alert = new Alert(Alert.AlertType.ERROR);
-            alert.initOwner(dialogStage);
-            alert.setTitle("Неправильно введеные поля");
-            alert.setHeaderText("Пожалуйста, повторите ввод данных полей");
-            alert.setContentText(errorMessage.toString());
-            alert.showAndWait();
-            return false;
-        }
+            {
+                Alert alert = new Alert(Alert.AlertType.ERROR);
+                alert.initOwner(dialogStage);
+                alert.setTitle("Неправильно введеные поля");
+                alert.setHeaderText("Пожалуйста, повторите ввод данных полей");
+                alert.setContentText(errorMessage.toString());
+                alert.showAndWait();
+                return false;
+            }
     }
 }
